#footer {     flex-wrap: nowrap;     align-self: right;     justify-self: right;     bottom: 0;     position: fixed;     display: block;     grid-template-rows: auto auto auto;     background-color: #D0D5D950;     color: white;     padding: 1px;     max-width: 40vw;     overflow-wrap: break-all;
  }

--- a/htau.css
+++ b/htau.css
@@ -289,18 +289,21 @@ margin-top: 15px;
 }
 
 #footer {
-
-    bottom:0;
-  position:fixed;
-    display: grid;
-grid-template-rows: auto auto auto;
-    background-color: black;
-  color:white;
-  padding:5px;
-  position:fixed;
-  width:50vw;
+    flex-wrap: nowrap;
+    align-self: right;
+    justify-self: right;
+    bottom: 0;
+    position: fixed;
+    display: block;
+    grid-template-rows: auto auto auto;
+    background-color: #D0D5D950;
+    color: white;
+    padding: 1px;
+    max-width: 40vw;
+    overflow-wrap: break-all;
+   
+  }
   
-}
 
 
 
